# FYDP

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
examples/contact/: Makefile  cmake_install.cmake
include/emokit/: emokit.h
output/: output_10s_1423530558.csv
python/: emotiv.py  python2.7.exe.stackdump  read_data.py
read/: CMakeLists.txt  Makefile  cmake_install.cmake  read.c
read_daemon/: CMakeLists.txt  Makefile  cmake_install.cmake  read_daemon.c  read_daemon.h
src/: Makefile  cmake_install.cmake  emokit.c
